# Visualizador-de-Malhas-3D-com-C-

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
documentacao_aprendizado/: Configuracao_inicial.md
src/: Shader.cpp  main.cpp
